  * Changed all the build scripts to work properly.
