@@ -24,7 +24,7 @@ configure: configure-stamp
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-    for i in `find . | grep Makefile` ; do echo $$i ; rm $$i; done
+	for i in `find . | grep Makefile` ; do echo $$i ; rm $$i; done
 	qmake
 	touch configure-stamp
 
