@@ -1,0 +1,16 @@
+#!/usr/bin/make -f
+# -*- makefile -*-
+
+# Uncomment this to turn on verbose mode.
+export DH_VERBOSE=1
+
+%:
+	dh  $@
+
+override_dh_install:
+	echo CURDIR is $(CURDIR)
+	$(MAKE) INSTALL_ROOT="$(CURDIR)"/debian/qgvdial install
+
+override_dh_auto_configure:
+	qmake
+
