@@ -1,5 +1,9 @@
 #summary Change log
 
+*2012-06-23*
+ * Long press for full refresh (inbox and contacts)
+ * Login failure at rnr_se: Fixed this code path to work correctly.
+
 *2012-06-10*
  * Changed all the build scripts to work properly.
 
